--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -3,11 +3,141 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(9, 9, 9, 0.658);
+  font-family: Arial, sans-serif;
+}
+
+#main {
+  display: flex;
+  flex-direction: column; /* Stack vertically */
+  align-items: flex-start; /* Align to top-left */
+  padding: 20px;
+  gap: 20px; /* Space between form and card */
+}
+
+/* Form Card Styling */
+.formdata {
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0px 4px 15px rgba(0,0,0,0.3);
+  width: 320px;
+}
+
+.formdata form {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.formdata input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 14px;
+  transition: 0.2s ease;
+}
+
+.formdata input:focus {
+  border-color: #007bff;
+  outline: none;
+  box-shadow: 0px 0px 5px rgba(0,123,255,0.5);
+}
+
+.formdata button {
+  padding: 10px;
+  border: none;
+  border-radius: 6px;
+  background-color: #007bff;
+  color: white;
+  font-size: 15px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.formdata button:hover {
+  background-color: #0056b3;
+}
+
+/* Profile Card Styling */
+.card {
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0px 4px 15px rgba(0,0,0,0.3);
+  width: 320px;
+  text-align: center;
+}
+
+.card img {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 3px solid #007bff;
+  margin-bottom: 12px;
+}
+
+.card h2 {
+  margin-bottom: 6px;
+}
+
+.card h4 {
+  color: #666;
+  margin-bottom: 10px;
+}
+
+.card p {
+  font-size: 14px;
+  color: #333;
+}
+
+</style>
+
     <title>Document</title>
 </head>
 <body>
-    <h1> Adnan Rock</h1>
-    
-    <script src="script.js"></script>
+    <!-- <h1> Adnan Rock</h1>
+<ul>
+    <li>apple 1</li>
+    <li>apple 2</li>
+    <li>apple 3</li>
+</ul> -->
+<!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nostrum veniam, accusantium, dolorum quam sequi sint ipsam facere eaque deserunt molestiae odio eum.</p> -->
+
+<div id="main">
+  <!-- Form Card -->
+  <div class="formdata">
+    <form id="profileForm">
+      <input type="text" placeholder="Image URL">
+      <input type="text"  placeholder="Name">
+      <input type="text" placeholder="Profession">
+      <input type="text"  placeholder="About">
+      <input type="submit" id="btn">
+    </form>
+  </div>
+
+
+  <!-- Profile Card -->
+  <!-- <div class="card" >
+    <img  src="" alt="">
+    <h3 >Adnan</h2>
+    <h4 >Engineer</h4>
+    <p >Pro player and coder</p>
+  </div>
+</div>--->
+</div>
+<script src="script.js"></script>
 </body>
 </html>
